--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,8 @@
 
       <textarea id="code" placeholder="// Paste your code here"></textarea>
 
-      <button id="submitBtn">Submit</button>
+      <button id="submitBtn" type="button">Submit</button>
+
     </div>
 
     <!-- CARD 2 -->
