📘 LC 2: Add Two Numbers

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,25 +39,12 @@
 
   <div id="toast" class="toast hidden"></div>
 
-      <div class="card stats-card">
-        <h2>Progress Tracker</h2>
-        <div class="stats-grid">
-          <div class="easy">
-            <h3 >Easy</h3>
-            <p id="easyCount">0</p>
-          </div>
-          <div class="medium">
-            <h3 >Medium</h3>
-            <p id="mediumCount">0</p>
-          </div>
-          <div class="hard" >
-            <h3>Hard</h3>
-            <p id="hardCount">0</p>
-          </div>
-        </div>
+      <div class="card success-card">
+  <h2>Success Log</h2>
+  <pre id="successLog">No activity yet...</pre>
+</div>
 
-        <h3>DSA Topics</h3>
-        <div class="dsa-grid" id="dsaStats">
+
           <!-- Filled dynamically -->
         </div>
       </div>
