✨ Add toast notification for GitHub push success

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,9 @@
     <p>LeetSync &copy; 2026 | Built with 💜 by you</p>
   </footer>
 
+
   <script src="script.js"></script>
+  <div id="toast" class="toast hidden"></div>
+
 </body>
 </html>
