--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,47 +5,31 @@
   <title>LeetSync</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
 
+<body>
   <header>
-    <h1>LeetSync</h1>
-    <p>Push LeetCode solutions to GitHub like a pro 🤖</p>
+    <h1>LeetSync 🤖</h1>
+    <p>Push LeetCode solutions to GitHub instantly</p>
   </header>
 
-  <main class="container">
-
-    <!-- CARD 1 -->
-    <div class="card">
-      <h2>Submit Problem</h2>
-
-      <input id="url" placeholder="LeetCode URL or Problem Number" />
-
+  <main>
+    <section class="card">
+      <input id="url" placeholder="LeetCode URL" />
       <select id="lang">
         <option value="cpp">C++</option>
         <option value="js">JavaScript</option>
         <option value="python">Python</option>
       </select>
+      <textarea id="code" placeholder="// Paste your solution"></textarea>
+      <button id="submitBtn">Push to GitHub</button>
+    </section>
 
-      <textarea id="code" placeholder="// Paste your code here"></textarea>
-
-      <button id="submitBtn" type="button">Submit</button>
-
-    </div>
-
-    <!-- CARD 2 -->
-    <div class="card">
-      <h2>Status</h2>
-      <pre id="status">Waiting for submission...</pre>
-    </div>
-
+    <section class="card">
+      <h3>Status</h3>
+      <pre id="status">Waiting...</pre>
+    </section>
   </main>
 
-  <!-- HISTORY -->
-  <section class="history">
-    <h2>Uploaded Problems</h2>
-    <ul id="historyList"></ul>
-  </section>
-
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
